Added some missing translations

--- a/KBs/Translations/terms-tg.txt
+++ b/KBs/Translations/terms-tg.txt
@@ -10,11 +10,9 @@
 ;
 ;  You should have received a copy of the GNU Lesser General Public
 ;  License along with this program; if not, write to the Free Software
-;  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  
-USA
+;  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
 ;
-; This file contains term translations for expressing tagalog phrases 
-that express
+; This file contains term translations for expressing tagalog phrases that express
 ; the contents of statements in a logical language.
 ;
 
@@ -31,10 +29,9 @@ that express
 (termFormat tg SelfConnectedObject "bagay na nakakabit sa sarili")
 (termFormat tg Substance "sangkap")
 (termFormat tg PureSubstance "purong sangkap")
-(termFormat tg ElementalSubstance "bahagi")
+(termFormat tg ElementalSubstance "bahagi ng sangkap")
 (termFormat tg Metal "metal")
 (termFormat tg Atom "atom")
-(termFormat tg Atom "")
 (termFormat tg SubatomicParticle "bahagi ng atom")
 (termFormat tg AtomicNucleus "gitna ng atom") 
 (termFormat tg Electron "bahagi ng atom")
@@ -42,9 +39,9 @@ that express
 (termFormat tg Neutron "bahagi ng atom")
 (termFormat tg CompoundSubstance "kalamnan hindi walisay")
 (termFormat tg Solution "banto")
-(termFormat tg CorpuscularObject "bagai")
+(termFormat tg CorpuscularObject "bagay")
 (termFormat tg Region "lugar")
-(termFormat tg Collection "napaningilan")
+(termFormat tg Collection "koleksiyon")
 (termFormat tg ContentBearingObject "tagadala ng impormasiyon")
 (termFormat tg SymbolicString "teksto")
 (termFormat tg Character "sulat")
@@ -64,25 +61,25 @@ that express
 (termFormat tg CognitiveAgent "kinatawan may kaalaman")
 (termFormat tg Process "paraan")
 (termFormat tg DualObjectProcess "paraan ng dalawang bagay")
-(termFormat tg Abstract "")
+(termFormat tg Abstract "buod")
 (termFormat tg Quantity "dami")
 (termFormat tg Attribute "katangian")
 (termFormat tg InternalAttribute "katangian sa loob")
 (termFormat tg RelationalAttribute "katangian ng magkaugnay")
-(termFormat tg RealNumber "tutoong numero")
-(termFormat tg ImaginaryNumber "kathang isip na numero")
-(termFormat tg RationalNumber "")
-(termFormat tg IrrationalNumber "")
+(termFormat tg RealNumber "tunay na numero")
+(termFormat tg ImaginaryNumber "haka-hakang numero numero")
+(termFormat tg RationalNumber "proporsiyong numero")
+(termFormat tg IrrationalNumber "hindi proporsiyong numero")
 (termFormat tg NonnegativeRealNumber "")
-(termFormat tg PositiveRealNumber "")
-(termFormat tg NegativeRealNumber "")
-(termFormat tg Integer "buo na numero")
-(termFormat tg EvenInteger "")
+(termFormat tg PositiveRealNumber "Positibong tunay na numero")
+(termFormat tg NegativeRealNumber "Negatibong tunay na numero")
+(termFormat tg Integer "buong numero")
+(termFormat tg EvenInteger "tukol na mga numero")
 (termFormat tg OddInteger "butal na numero")
-(termFormat tg PrimeNumber "mataas na numero")
+(termFormat tg PrimeNumber "gansal na numero")
 (termFormat tg NonnegativeInteger "")
-(termFormat tg NegativeInteger "")
-(termFormat tg PositiveInteger "")
+(termFormat tg NegativeInteger "negatibong numero")
+(termFormat tg PositiveInteger "positibong numero")
 (termFormat tg BinaryNumber "")
 (termFormat tg ComplexNumber "halu-halong numero")
 (termFormat tg PhysicalQuantity "dami ng materyal")
@@ -136,25 +133,25 @@ that express
 (termFormat tg TernaryFunction "tatlong tungkulin")
 (termFormat tg QuaternaryFunction "apat na tungkulin")
 (termFormat tg ContinuousFunction "gawaing walang tigil")
-(termFormat tg LogicalOperator "")
-(termFormat tg BinaryPredicate "dalawang")
-(termFormat tg TernaryPredicate "tunkalin ng tatlong bagay")
-(termFormat tg QuaternaryPredicate "tunkalin ng abat ng bagay")
-(termFormat tg QuintaryPredicate "tunkalin ng limang bagay")
-(termFormat tg VariableArityRelation "tunkalin ng numero paiba-iba")
+(termFormat tg LogicalOperator "mangatwirang tagapamahala")
+(termFormat tg BinaryPredicate "dalawang panaguri")
+(termFormat tg TernaryPredicate "tatlong panaguri")
+(termFormat tg QuaternaryPredicate "apat na panaguri")
+(termFormat tg QuintaryPredicate "limang panaguri")
+(termFormat tg VariableArityRelation "kaugnayan ng ibat-ibang numero")
 (termFormat tg RelationExtendedToQuantities "")
 (termFormat tg Proposition "panukala")
 (termFormat tg Graph "talaguhitan")
-(termFormat tg DirectedGraph "")
-(termFormat tg Tree "")
-(termFormat tg GraphPath "")
-(termFormat tg GraphCircuit "")
-(termFormat tg MultiGraph "")
-(termFormat tg PseudoGraph "")
-(termFormat tg GraphElement "")
-(termFormat tg GraphNode "")
-(termFormat tg GraphArc "")
-(termFormat tg GraphLoop "")
+(termFormat tg DirectedGraph "tuwirang talaguhitan")
+(termFormat tg Tree "punong kahoy")
+(termFormat tg GraphPath "bakas na talaguhitan")
+(termFormat tg GraphCircuit "paligid ng talaguhitan")
+(termFormat tg MultiGraph "napakaraming talaguhitan")
+(termFormat tg PseudoGraph "huwad na talaguhitan")
+(termFormat tg GraphElement "bahagi ng talaguhitan")
+(termFormat tg GraphNode "pinagdugtungang talaguhitan")
+(termFormat tg GraphArc "talaguhitang hubog")
+(termFormat tg GraphLoop "talaguhitang silo")
 (termFormat tg Hole "butas")
 (termFormat tg Pi "")
 (termFormat tg NumberE "")
@@ -167,14 +164,14 @@ that express
 (termFormat tg StreamWaterArea "laki ng agos")
 (termFormat tg StaticWaterArea "liki ng ubig tahimik")
 (termFormat tg LandArea "laki ng lupa")
-(termFormat tg Continent "")
+(termFormat tg Continent "Kontinente")
 (termFormat tg Island "pilo")
 (termFormat tg Nation "bansa")
 (termFormat tg StateOrProvince "lalawigan")
 (termFormat tg Address "direksiyon")
 (termFormat tg City "siyudad")
 (termFormat tg Water "tubig")
-(termFormat tg Mineral "")
+(termFormat tg Mineral "mineral")
 (termFormat tg OrganicObject "bagay ng buhay")
 (termFormat tg Organism "kinapal")
 (termFormat tg Plant "pananim")
@@ -260,7 +257,7 @@ that express
 (termFormat tg Article "Artikulo, Lathala")
 (termFormat tg Certificate "katibayan")
 (termFormat tg Patent "Patente")
-(termFormat tg Molecule "")
+(termFormat tg Molecule "maliit na butil")
 (termFormat tg Artifact "bagay")
 (termFormat tg Product "bunga")
 (termFormat tg StationaryArtifact "nakapirming bagay")
@@ -542,3 +539,5 @@ that express
 (termFormat tg On "sa ibabaw")
 (termFormat tg Upstairs "sa itaas ng hagdan")
 (termFormat tg Downstairs "sa ibaba ng hagdan")
+
+
