Fixed a few small translation errors

--- a/KBs/Translations/relations-tg.txt
+++ b/KBs/Translations/relations-tg.txt
@@ -73,7 +73,7 @@
 (termFormat tg AssignmentFn "tungkulin ng takdan")
 (format tg attribute "%1 %n may katangian ng %2")
 (termFormat tg attribute "katangian")
-(format tg authors "%1 ay ang &%sumulat sa %2")
+(format tg authors "%1 ay ang &%sumulat ng %2")
 (termFormat tg authors "sumulat")
 (format tg BackFn "ang &%likod ng %1")
 (termFormat tg BackFn "tungkulin ng likod")
@@ -87,8 +87,8 @@
 (termFormat tg BeginNodeFn "tunkulin ng simula buko")
 (format tg believes "%1 %n naniniwala %2")
 (termFormat tg believes "naniniwala")
-(format tg between "%2 %n ay sa pagitan ng %1 at %3")
-(termFormat tg between "sa pagitan")
+(format tg between "%2 %n ay sa gitna ng %1 at %3")
+(termFormat tg between "sa gitna")
 (format tg birthTime "%1 %n ay &%kampanganakan sa %2")
 (termFormat tg birthTime "kampanganakan")
 (format tg bottom "ang &%ilalim sa %2 %n ay %1")
@@ -505,6 +505,6 @@
 (format tg WealthFn "&%halaga ng bagay ng %1")
 (format tg WhenFn "ang &%panahon ng kabuhayan ng %1")
 (format tg WhereFn "ang lugar &%saan %1 ay sa %2")
-(format tg width "ang &%kalaparn ng %1 %n ay %2")
+(format tg width "ang &%kalaparan ng %1 %n ay %2")
 (format tg YearFn "ang &%taon %1")
 
