--- a/KBs/Translations/language.txt
+++ b/KBs/Translations/language.txt
@@ -29,42 +29,42 @@
 ; Hindi translation thanks to Pushpak Bhattacharya and Suresh Kumar
 ; French translation thanks to Michaël Riotte supported by Dominique Dutoit
 
-en|de|cz|it|tg|hi|cb|fr
-english|deutsch|cesky|italiano|tagalog|hindi|cebuano|français
-engFormat|deFormat|czFormat|itFormat|tgFormat|hiFormat|cbFormat|frformat
-engTermFormat|deTermFormat|czTermFormat|itTermFormat|tgTermFormat|hiTermFormat|cbTermFormat|frTermFormat
-if|wenn|jestlize|se|kong|yadi|kong|si
-then|dann|potom|allora|kung gayon|to|kong mao|alors
-if and only if|genau dann wenn|tehdy a jen tehdy pokud|se e soltanto se|kung at tangi kung|tabhii aura sirpha tabhii|kong, ug usa ra kong|si et seulement si
-either|entweder|buï|sia|alinman|yaa|usa|l'un ou l'autre
-not|nicht|ne|non|hindi|nahiin|dili|pas
-or|oder|nebo|o|o|yaa|kon|ou
-and|und|a|e|at|aura|ug|et
-there exist|es gibt|existují|esistono|mayroon|hain|naay|il existe
-there exists|es gibt|existuje|esiste|mayroon|hai|naay|il existe
-there don't exist|es gibt nicht|neexistují|non esistono|walang|nahiin hain|dili naay|il n'existe pas
-there doesn't exist|es gibt nicht|neexistuje|non esiste|walang|nahiin hai|dili naay|il n'existe pas
-for all|fuer alle|pro vsechny|per ogni|para sa lahat|sabhii|sa tanan|pour tout
-holds|gilt|platí|vale|maging totoo|sahii hai|tinuod sa|s'applique
-so that|um|tak, ze|tale che|para sa ganoon|jisase ki|ug kanang|de sorte que
-Select language|Waehlen Sprache|Zvolte jazyk|Seleziona lingua|pumili ng wika|bhaashhaa chuniye|pagpili pinulongan|Selectionner la langue
-Concept|Begriff|Koncept|Concetto|Ideya|sankalpanaa|hunahuna|Concept
-Show|Zeigen|Zobraz|Mostra|Ipakita|pradarshana|pagpakita|Voir
-Home|Hauptseite|Hlavní stránka|Pagina Iniziale|Bahay pahina|Homa|balay|Page d'accueil
-Ontology|Ontologie|Ontologie|Ontologia|Ontologia|vyashhTi vigyaana|Ontologia|Ontologie
-Superclass(es)|Superklasse|Nadtøída(y)|Sopraclasse|(Mga) mas klase ng mataas|adhivarga(adhivargon)|dugang pa mataas matang|Superclasse(s)
-Subclass(es)|Subklasse|Podtøída(y)|Sottoclasse|(Mga) mas mababa ng klase|upavarga(upavargon)|kulang mataas matang|Sous-classe(s)
-Is instance of|Ist ein Fall von|Je instancí tøíd(y)|E' istanza di|Isang halimbawa ng|kaa udaaharaNa hai|mao ang pananglitan sa|est l'Instance de
-Type restrictions|Beschraenkungen von Klasse|Typy argumentù|Restrizioni sul tipo|Tipo ng Pangpamimigil|prakaara niyantraNa|Tipo ng pagpugong|Restrictions sur le type
-Constrains relations|Zwingt Relationen|Omezuje relace|Relazioni di Vincolo|Pamimigil ng ugnayan|magpilit ng pagpatakdo|Relations contraintes
-Axioms|Axiome|Axiomy|Assiomi|Aksioma|svayansiddha|Aksioma|Axiomes
-Classes|Klassen|Tøídy|Classi|Mga klase|vargon|Mga matang|Classes
-Instances|Faelle|Instance|Istanze|Mga halimbawa|udaaharaNon|Mga pananglitan|Instances
-Relations|Relationen|Relace|Relazioni|Mga kaugnayan|sambandhon|Mga pagpatakdo|Relations
-Functions|Funktionen|Funkce|Funzioni|Mga katuturan|phalana|Mga lihok|Fonctions
-Other|Andere|Jiné|Altro|Iba|anya|uban|Autre
-Subclass and Instance Hierarchy Tree|Hierarchiebaum fuer Subklassen und Faelle|Hierarchie podtøíd a instancí|Albero Gerarchico delle Sottoclassi e delle Istanze|Mababang klase at halimbawa ng pangkataasang organizasyon|upavarga-padaanukrama trii|kulang mataas matang ug pananglitan kahoy|Arbre Hiérarchique des Sous-classes et des Instances
-Welcome to the SUO-KIF browser|Willkommen beim SUO-KIF Browser|Vítejte v prohlízeèi SUO-KIF|Benvenuti nel SUO-KIF browser|Mabuhay sa ang tagabasa ng SUO-KIF||maayong pag-abut sa ang tagapasibsib ng SUO-KIF|Bienvenue dans le SUO-KIF browser
-Show Instances|Zeigen Faelle|Zobrazit instance|Mostra Istanze|Ipakitaa ang mga halimbawa|pagpakita mga pananglitan|Voir les Instances
-Show Arities|Zeigen Aritien|Zobrazit arity|Mostra Arità|Ipakita ang bilang|pagpakita mga isip|Voir les Aritées
+EnglishLanguage|de|cz|it|tg|hi|cb|fr|ar
+english|deutsch|cesky|italiano|tagalog|hindi|cebuano|français|.
+engFormat|deFormat|czFormat|itFormat|tgFormat|hiFormat|cbFormat|frformat|.
+engTermFormat|deTermFormat|czTermFormat|itTermFormat|tgTermFormat|hiTermFormat|cbTermFormat|frTermFormat|.
+if|wenn|jestlize|se|kong|yadi|kong|si|Ø¥Ø°Ø§
+then|dann|potom|allora|kung gayon|to|kong mao|alors|ÙŠÙ‚ØªØ¶ÙŠ 
+if and only if|genau dann wenn|tehdy a jen tehdy pokud|se e soltanto se|kung at tangi kung|tabhii aura sirpha tabhii|kong, ug usa ra kong|si et seulement si|.
+either|entweder|buï|sia|alinman|yaa|usa|l'un ou l'autre|.
+not|nicht|ne|non|hindi|nahiin|dili|pas| Ù„Ø§
+or|oder|nebo|o|o|yaa|kon|ou|Ø£Ùˆ
+and|und|a|e|at|aura|ug|et|Ùˆ
+there exist|es gibt|existují|esistono|mayroon|hain|naay|il existe|ÙŠÙˆØ¬Ø¯
+there exists|es gibt|existuje|esiste|mayroon|hai|naay|il existe|ÙŠÙˆØ¬Ø¯
+there don't exist|es gibt nicht|neexistují|non esistono|walang|nahiin hain|dili naay|il n'existe pas|Ù„Ø§ ÙŠÙˆØ¬Ø¯
+there doesn't exist|es gibt nicht|neexistuje|non esiste|walang|nahiin hai|dili naay|il n'existe pas|Ù„Ø§ ÙŠÙˆØ¬Ø¯
+for all|fuer alle|pro vsechny|per ogni|para sa lahat|sabhii|sa tanan|pour tout|Ù…Ù† Ø£Ø¬Ù„ ÙƒÙ„
+holds|gilt|platí|vale|maging totoo|sahii hai|tinuod sa|s'applique| ÙŠØµØ­
+so that|um|tak, ze|tale che|para sa ganoon|jisase ki|ug kanang|de sorte que|Ø¨Ø­ÙŠØ«
+Select language|Waehlen Sprache|Zvolte jazyk|Seleziona lingua|pumili ng wika|bhaashhaa chuniye|pagpili pinulongan|Selectionner la langue|.
+Concept|Begriff|Koncept|Concetto|Ideya|sankalpanaa|hunahuna|Concept|.
+Show|Zeigen|Zobraz|Mostra|Ipakita|pradarshana|pagpakita|Voir|.
+Home|Hauptseite|Hlavní stránka|Pagina Iniziale|Bahay pahina|Homa|balay|Page d'accueil|.
+Ontology|Ontologie|Ontologie|Ontologia|Ontologia|vyashhTi vigyaana|Ontologia|Ontologie|.
+Superclass(es)|Superklasse|Nadtøída(y)|Sopraclasse|(Mga) mas klase ng mataas|adhivarga(adhivargon)|dugang pa mataas matang|Superclasse(s)|.
+Subclass(es)|Subklasse|Podtøída(y)|Sottoclasse|(Mga) mas mababa ng klase|upavarga(upavargon)|kulang mataas matang|Sous-classe(s)|.
+Is instance of|Ist ein Fall von|Je instancí tøíd(y)|E' istanza di|Isang halimbawa ng|kaa udaaharaNa hai|mao ang pananglitan sa|est l'Instance de|.
+Type restrictions|Beschraenkungen von Klasse|Typy argumentù|Restrizioni sul tipo|Tipo ng Pangpamimigil|prakaara niyantraNa|Tipo ng pagpugong|Restrictions sur le type|.
+Constrains relations|Zwingt Relationen|Omezuje relace|Relazioni di Vincolo|Pamimigil ng ugnayan|magpilit ng pagpatakdo|Relations contraintes|.
+Axioms|Axiome|Axiomy|Assiomi|Aksioma|svayansiddha|Aksioma|Axiomes|.
+Classes|Klassen|Tøídy|Classi|Mga klase|vargon|Mga matang|Classes|.
+Instances|Faelle|Instance|Istanze|Mga halimbawa|udaaharaNon|Mga pananglitan|Instances|.
+Relations|Relationen|Relace|Relazioni|Mga kaugnayan|sambandhon|Mga pagpatakdo|Relations|.
+Functions|Funktionen|Funkce|Funzioni|Mga katuturan|phalana|Mga lihok|Fonctions|.
+Other|Andere|Jiné|Altro|Iba|anya|uban|Autre|.
+Subclass and Instance Hierarchy Tree|Hierarchiebaum fuer Subklassen und Faelle|Hierarchie podtøíd a instancí|Albero Gerarchico delle Sottoclassi e delle Istanze|Mababang klase at halimbawa ng pangkataasang organizasyon|upavarga-padaanukrama trii|kulang mataas matang ug pananglitan kahoy|Arbre Hiérarchique des Sous-classes et des Instances|.
+Welcome to the SUO-KIF browser|Willkommen beim SUO-KIF Browser|Vítejte v prohlízeèi SUO-KIF|Benvenuti nel SUO-KIF browser|Mabuhay sa ang tagabasa ng SUO-KIF||maayong pag-abut sa ang tagapasibsib ng SUO-KIF|Bienvenue dans le SUO-KIF browser|.
+Show Instances|Zeigen Faelle|Zobrazit instance|Mostra Istanze|Ipakitaa ang mga halimbawa|pagpakita mga pananglitan|Voir les Instances|.
+Show Arities|Zeigen Aritien|Zobrazit arity|Mostra Arità|Ipakita ang bilang|pagpakita mga isip|Voir les Aritées|.
 
