Add values for (an)other, kind of, and the ordinals from one through twelve, to support variable replacement in Arabic paraphrases.

--- a/KBs/Translations/language.txt
+++ b/KBs/Translations/language.txt
@@ -30,13 +30,29 @@
 ; French translation thanks to Michaël Riotte supported by Dominique Dutoit
 
 EnglishLanguage|de|cz|it|tg|hi|cb|fr|ar
-english|deutsch|cesky|italiano|tagalog|hindi|cebuano|français|.
-engFormat|deFormat|czFormat|itFormat|tgFormat|hiFormat|cbFormat|frformat|.
-engTermFormat|deTermFormat|czTermFormat|itTermFormat|tgTermFormat|hiTermFormat|cbTermFormat|frTermFormat|.
+english|deutsch|cesky|italiano|tagalog|hindi|cebuano|français|**
+engFormat|deFormat|czFormat|itFormat|tgFormat|hiFormat|cbFormat|frformat|**
+engTermFormat|deTermFormat|czTermFormat|itTermFormat|tgTermFormat|hiTermFormat|cbTermFormat|frTermFormat|**
+the|**|**|**|**|**|**|**|&#x627;&#x644;
+other|**|**|**|**|**|**|**|&#x623;&#x62e;&#x631;
+another|**|**|**|**|**|**|**|&#x623;&#x62e;&#x631;
+first|**|**|**|**|**|**|**|&#x627;&#x644;&#x623;&#x648;&#x644;
+second|**|**|**|**|**|**|**|&#x627;&#x644;&#x62b;&#x651;&#x627;&#x646;&#x650;&#x64a;
+third|**|**|**|**|**|**|**|&#x627;&#x644;&#x62b;&#x651;&#x627;&#x644;&#x650;&#x62b;
+fourth|**|**|**|**|**|**|**|&#x627;&#x644;&#x631;&#x651;&#x627;&#x628;&#x650;&#x639;
+fifth|**|**|**|**|**|**|**|&#x627;&#x644;&#x62e;&#x64e;&#x627;&#x645;&#x650;&#x633;
+sixth|**|**|**|**|**|**|**|&#x627;&#x644;&#x633;&#x651;&#x64e;&#x627;&#x62f;&#x650;&#x633;
+seventh|**|**|**|**|**|**|**|&#x627;&#x644;&#x633;&#x651;&#x627;&#x628;&#x650;&#x639;
+eighth|**|**|**|**|**|**|**|&#x627;&#x644;&#x62b;&#x651;&#x627;&#x645;&#x650;&#x646;
+ninth|**|**|**|**|**|**|**|&#x627;&#x644;&#x62a;&#x651;&#x627;&#x633;&#x650;&#x639;
+tenth|**|**|**|**|**|**|**|&#x627;&#x644;&#x639;&#x627;&#x634;&#x650;&#x631;
+eleventh|**|**|**|**|**|**|**|&#x627;&#x644;&#x62d;&#x627;&#x62f;&#x650;&#x64a;&#x64e;&#x20;&#x639;&#x64e;&#x634;&#x64e;&#x631;
+twelfth|**|**|**|**|**|**|**|&#x627;&#x644;&#x62b;&#x651;&#x627;&#x646;&#x650;&#x64a;&#x64e;&#x20;&#x639;&#x64e;&#x634;&#x64e;&#x631;
+kind of|**|**|**|**|**|**|**|&#x646;&#x64e;&#x648;&#x652;&#x639;&#x20;&#x645;&#x650;&#x646;
 if|wenn|jestlize|se|kong|yadi|kong|si|&#x625;&#x630;&#x627;
 then|dann|potom|allora|kung gayon|to|kong mao|alors|&#x64a;&#x642;&#x62a;&#x636;&#x64a;
-if and only if|genau dann wenn|tehdy a jen tehdy pokud|se e soltanto se|kung at tangi kung|tabhii aura sirpha tabhii|kong, ug usa ra kong|si et seulement si|.
-either|entweder|buï|sia|alinman|yaa|usa|l'un ou l'autre|.
+if and only if|genau dann wenn|tehdy a jen tehdy pokud|se e soltanto se|kung at tangi kung|tabhii aura sirpha tabhii|kong, ug usa ra kong|si et seulement si|**
+either|entweder|buï|sia|alinman|yaa|usa|l'un ou l'autre|**
 not|nicht|ne|non|hindi|nahiin|dili|pas|&#x644;&#x627;
 or|oder|nebo|o|o|yaa|kon|ou|&#x623;&#x648;
 and|und|a|e|at|aura|ug|et|&#x648;
@@ -50,24 +66,24 @@ so that|um|tak, ze|tale che|para sa ganoon|jisase ki|ug kanang|de sorte que|&#x6
 such that|um|tak, ze|tale che|para sa ganoon|jisase ki|ug kanang|de sorte que|&#x628;&#x62d;&#x64a;&#x62b;
 ,|,|,|,|,|,|,|,|&#x60c;
 ?|?|?|?|?|?|?|?|&#x61f;
-Select language|Waehlen Sprache|Zvolte jazyk|Seleziona lingua|pumili ng wika|bhaashhaa chuniye|pagpili pinulongan|Selectionner la langue|.
-Concept|Begriff|Koncept|Concetto|Ideya|sankalpanaa|hunahuna|Concept|.
-Show|Zeigen|Zobraz|Mostra|Ipakita|pradarshana|pagpakita|Voir|.
-Home|Hauptseite|Hlavní stránka|Pagina Iniziale|Bahay pahina|Homa|balay|Page d'accueil|.
-Ontology|Ontologie|Ontologie|Ontologia|Ontologia|vyashhTi vigyaana|Ontologia|Ontologie|.
-Superclass(es)|Superklasse|Nadtøída(y)|Sopraclasse|(Mga) mas klase ng mataas|adhivarga(adhivargon)|dugang pa mataas matang|Superclasse(s)|.
-Subclass(es)|Subklasse|Podtøída(y)|Sottoclasse|(Mga) mas mababa ng klase|upavarga(upavargon)|kulang mataas matang|Sous-classe(s)|.
-Is instance of|Ist ein Fall von|Je instancí tøíd(y)|E' istanza di|Isang halimbawa ng|kaa udaaharaNa hai|mao ang pananglitan sa|est l'Instance de|.
-Type restrictions|Beschraenkungen von Klasse|Typy argumentù|Restrizioni sul tipo|Tipo ng Pangpamimigil|prakaara niyantraNa|Tipo ng pagpugong|Restrictions sur le type|.
-Constrains relations|Zwingt Relationen|Omezuje relace|Relazioni di Vincolo|Pamimigil ng ugnayan|magpilit ng pagpatakdo|Relations contraintes|.
-Axioms|Axiome|Axiomy|Assiomi|Aksioma|svayansiddha|Aksioma|Axiomes|.
-Classes|Klassen|Tøídy|Classi|Mga klase|vargon|Mga matang|Classes|.
-Instances|Faelle|Instance|Istanze|Mga halimbawa|udaaharaNon|Mga pananglitan|Instances|.
-Relations|Relationen|Relace|Relazioni|Mga kaugnayan|sambandhon|Mga pagpatakdo|Relations|.
-Functions|Funktionen|Funkce|Funzioni|Mga katuturan|phalana|Mga lihok|Fonctions|.
-Other|Andere|Jiné|Altro|Iba|anya|uban|Autre|.
-Subclass and Instance Hierarchy Tree|Hierarchiebaum fuer Subklassen und Faelle|Hierarchie podtøíd a instancí|Albero Gerarchico delle Sottoclassi e delle Istanze|Mababang klase at halimbawa ng pangkataasang organizasyon|upavarga-padaanukrama trii|kulang mataas matang ug pananglitan kahoy|Arbre Hiérarchique des Sous-classes et des Instances|.
-Welcome to the SUO-KIF browser|Willkommen beim SUO-KIF Browser|Vítejte v prohlízeèi SUO-KIF|Benvenuti nel SUO-KIF browser|Mabuhay sa ang tagabasa ng SUO-KIF||maayong pag-abut sa ang tagapasibsib ng SUO-KIF|Bienvenue dans le SUO-KIF browser|.
-Show Instances|Zeigen Faelle|Zobrazit instance|Mostra Istanze|Ipakitaa ang mga halimbawa|pagpakita mga pananglitan|Voir les Instances|.
-Show Arities|Zeigen Aritien|Zobrazit arity|Mostra Arità|Ipakita ang bilang|pagpakita mga isip|Voir les Aritées|.
+Select language|Waehlen Sprache|Zvolte jazyk|Seleziona lingua|pumili ng wika|bhaashhaa chuniye|pagpili pinulongan|Selectionner la langue|**
+Concept|Begriff|Koncept|Concetto|Ideya|sankalpanaa|hunahuna|Concept|**
+Show|Zeigen|Zobraz|Mostra|Ipakita|pradarshana|pagpakita|Voir|**
+Home|Hauptseite|Hlavní stránka|Pagina Iniziale|Bahay pahina|Homa|balay|Page d'accueil|**
+Ontology|Ontologie|Ontologie|Ontologia|Ontologia|vyashhTi vigyaana|Ontologia|Ontologie|**
+Superclass(es)|Superklasse|Nadtøída(y)|Sopraclasse|(Mga) mas klase ng mataas|adhivarga(adhivargon)|dugang pa mataas matang|Superclasse(s)|**
+Subclass(es)|Subklasse|Podtøída(y)|Sottoclasse|(Mga) mas mababa ng klase|upavarga(upavargon)|kulang mataas matang|Sous-classe(s)|**
+Is instance of|Ist ein Fall von|Je instancí tøíd(y)|E' istanza di|Isang halimbawa ng|kaa udaaharaNa hai|mao ang pananglitan sa|est l'Instance de|**
+Type restrictions|Beschraenkungen von Klasse|Typy argumentù|Restrizioni sul tipo|Tipo ng Pangpamimigil|prakaara niyantraNa|Tipo ng pagpugong|Restrictions sur le type|**
+Constrains relations|Zwingt Relationen|Omezuje relace|Relazioni di Vincolo|Pamimigil ng ugnayan|magpilit ng pagpatakdo|Relations contraintes|**
+Axioms|Axiome|Axiomy|Assiomi|Aksioma|svayansiddha|Aksioma|Axiomes|**
+Classes|Klassen|Tøídy|Classi|Mga klase|vargon|Mga matang|Classes|**
+Instances|Faelle|Instance|Istanze|Mga halimbawa|udaaharaNon|Mga pananglitan|Instances|**
+Relations|Relationen|Relace|Relazioni|Mga kaugnayan|sambandhon|Mga pagpatakdo|Relations|**
+Functions|Funktionen|Funkce|Funzioni|Mga katuturan|phalana|Mga lihok|Fonctions|**
+Other|Andere|Jiné|Altro|Iba|anya|uban|Autre|**
+Subclass and Instance Hierarchy Tree|Hierarchiebaum fuer Subklassen und Faelle|Hierarchie podtøíd a instancí|Albero Gerarchico delle Sottoclassi e delle Istanze|Mababang klase at halimbawa ng pangkataasang organizasyon|upavarga-padaanukrama trii|kulang mataas matang ug pananglitan kahoy|Arbre Hiérarchique des Sous-classes et des Instances|**
+Welcome to the SUO-KIF browser|Willkommen beim SUO-KIF Browser|Vítejte v prohlízeèi SUO-KIF|Benvenuti nel SUO-KIF browser|Mabuhay sa ang tagabasa ng SUO-KIF||maayong pag-abut sa ang tagapasibsib ng SUO-KIF|Bienvenue dans le SUO-KIF browser|**
+Show Instances|Zeigen Faelle|Zobrazit instance|Mostra Istanze|Ipakitaa ang mga halimbawa|pagpakita mga pananglitan|Voir les Instances|**
+Show Arities|Zeigen Aritien|Zobrazit arity|Mostra Arità|Ipakita ang bilang|pagpakita mga isip|Voir les Aritées|**
 
