Changed message to accommodate non-military files under development.

--- a/KBs/development/README
+++ b/KBs/development/README
@@ -1,7 +1,12 @@
-Files in this directory are in an early stage of development and are
-not yet suitable for general use.  Terms defined represent military
-content taken from the Joint Dictionary of Military Terms.
+Files in this directory are in development and are not suitable
+for general use.  Several of the files define terms that
+represent military content taken from the Joint Dictionary of
+Military Terms.
 
-Those who are interested in making use of this ontology are urged to
-contact Adam Pease (adampease@earthlink.net) and Jan Scheffczyk
-(jan@ICSI.Berkeley.EDU).
+Those interested in making use of the military content are urged
+to contact Adam Pease (adampease@earthlink.net) and Jan
+Scheffczyk (jan@ICSI.Berkeley.EDU).  Note that most of the files
+in this directory now have "released" versions in the directory
+immediately above this one.
+
+
