--- a/KBs/Translations/language.txt
+++ b/KBs/Translations/language.txt
@@ -1,6 +1,3 @@
-;
-;  Copyright (C) 2002 Michal Sevcenko
-;
 ;  This program is free software; you can redistribute it and/or
 ;  modify it under the terms of the GNU Lesser General Public
 ;  License as published by the Free Software Foundation; either
@@ -27,63 +24,63 @@
 ; Tagalog translation thanks to Lito Perez Cruz
 ; Italian translation thanks to Marisa Ulivieri & Stefano Molino
 ; Hindi translation thanks to Pushpak Bhattacharya and Suresh Kumar
-; French translation thanks to Michaël Riotte supported by Dominique Dutoit
+; French translation thanks to Michaï¿½l Riotte supported by Dominique Dutoit
 
-EnglishLanguage|de|cz|it|tg|hi|cb|fr|ar
-english|deutsch|cesky|italiano|tagalog|hindi|cebuano|français|**
-engFormat|deFormat|czFormat|itFormat|tgFormat|hiFormat|cbFormat|frformat|**
-engTermFormat|deTermFormat|czTermFormat|itTermFormat|tgTermFormat|hiTermFormat|cbTermFormat|frTermFormat|**
-the|**|**|**|**|**|**|**|&#x627;&#x644;
-other|**|**|**|**|**|**|**|&#x623;&#x62e;&#x631;
-another|**|**|**|**|**|**|**|&#x623;&#x62e;&#x631;
-first|**|**|**|**|**|**|**|&#x627;&#x644;&#x623;&#x648;&#x644;
-second|**|**|**|**|**|**|**|&#x627;&#x644;&#x62b;&#x651;&#x627;&#x646;&#x650;&#x64a;
-third|**|**|**|**|**|**|**|&#x627;&#x644;&#x62b;&#x651;&#x627;&#x644;&#x650;&#x62b;
-fourth|**|**|**|**|**|**|**|&#x627;&#x644;&#x631;&#x651;&#x627;&#x628;&#x650;&#x639;
-fifth|**|**|**|**|**|**|**|&#x627;&#x644;&#x62e;&#x64e;&#x627;&#x645;&#x650;&#x633;
-sixth|**|**|**|**|**|**|**|&#x627;&#x644;&#x633;&#x651;&#x64e;&#x627;&#x62f;&#x650;&#x633;
-seventh|**|**|**|**|**|**|**|&#x627;&#x644;&#x633;&#x651;&#x627;&#x628;&#x650;&#x639;
-eighth|**|**|**|**|**|**|**|&#x627;&#x644;&#x62b;&#x651;&#x627;&#x645;&#x650;&#x646;
-ninth|**|**|**|**|**|**|**|&#x627;&#x644;&#x62a;&#x651;&#x627;&#x633;&#x650;&#x639;
-tenth|**|**|**|**|**|**|**|&#x627;&#x644;&#x639;&#x627;&#x634;&#x650;&#x631;
-eleventh|**|**|**|**|**|**|**|&#x627;&#x644;&#x62d;&#x627;&#x62f;&#x650;&#x64a;&#x64e;&#x20;&#x639;&#x64e;&#x634;&#x64e;&#x631;
-twelfth|**|**|**|**|**|**|**|&#x627;&#x644;&#x62b;&#x651;&#x627;&#x646;&#x650;&#x64a;&#x64e;&#x20;&#x639;&#x64e;&#x634;&#x64e;&#x631;
-kind of|**|**|**|**|**|**|**|&#x646;&#x64e;&#x648;&#x652;&#x639;&#x20;&#x645;&#x650;&#x646;
-if|wenn|jestlize|se|kong|yadi|kong|si|&#x625;&#x630;&#x627;
-then|dann|potom|allora|kung gayon|to|kong mao|alors|&#x64a;&#x642;&#x62a;&#x636;&#x64a;
-if and only if|genau dann wenn|tehdy a jen tehdy pokud|se e soltanto se|kung at tangi kung|tabhii aura sirpha tabhii|kong, ug usa ra kong|si et seulement si|**
-either|entweder|buï|sia|alinman|yaa|usa|l'un ou l'autre|**
-not|nicht|ne|non|hindi|nahiin|dili|pas|&#x644;&#x627;
-or|oder|nebo|o|o|yaa|kon|ou|&#x623;&#x648;
-and|und|a|e|at|aura|ug|et|&#x648;
-there exist|es gibt|existují|esistono|mayroon|hain|naay|il existe|&#x64a;&#x648;&#x62c;&#x62f;
-there exists|es gibt|existuje|esiste|mayroon|hai|naay|il existe|&#x64a;&#x648;&#x62c;&#x62f;
-there don't exist|es gibt nicht|neexistují|non esistono|walang|nahiin hain|dili naay|il n'existe pas|&#x644;&#x627;&#x20;&#x64a;&#x648;&#x62c;&#x62f;
-there doesn't exist|es gibt nicht|neexistuje|non esiste|walang|nahiin hai|dili naay|il n'existe pas|&#x644;&#x627;&#x20;&#x64a;&#x648;&#x62c;&#x62f;
-for all|fuer alle|pro vsechny|per ogni|para sa lahat|sabhii|sa tanan|pour tout|&#x645;&#x646;&#x20;&#x623;&#x62c;&#x644;&#x20;&#x643;&#x644;
-holds|gilt|platí|vale|maging totoo|sahii hai|tinuod sa|s'applique|&#x64a;&#x635;&#x62d;
-so that|um|tak, ze|tale che|para sa ganoon|jisase ki|ug kanang|de sorte que|&#x628;&#x62d;&#x64a;&#x62b;
-such that|um|tak, ze|tale che|para sa ganoon|jisase ki|ug kanang|de sorte que|&#x628;&#x62d;&#x64a;&#x62b;
-,|,|,|,|,|,|,|,|&#x60c;
-?|?|?|?|?|?|?|?|&#x61f;
-Select language|Waehlen Sprache|Zvolte jazyk|Seleziona lingua|pumili ng wika|bhaashhaa chuniye|pagpili pinulongan|Selectionner la langue|**
-Concept|Begriff|Koncept|Concetto|Ideya|sankalpanaa|hunahuna|Concept|**
-Show|Zeigen|Zobraz|Mostra|Ipakita|pradarshana|pagpakita|Voir|**
-Home|Hauptseite|Hlavní stránka|Pagina Iniziale|Bahay pahina|Homa|balay|Page d'accueil|**
-Ontology|Ontologie|Ontologie|Ontologia|Ontologia|vyashhTi vigyaana|Ontologia|Ontologie|**
-Superclass(es)|Superklasse|Nadtøída(y)|Sopraclasse|(Mga) mas klase ng mataas|adhivarga(adhivargon)|dugang pa mataas matang|Superclasse(s)|**
-Subclass(es)|Subklasse|Podtøída(y)|Sottoclasse|(Mga) mas mababa ng klase|upavarga(upavargon)|kulang mataas matang|Sous-classe(s)|**
-Is instance of|Ist ein Fall von|Je instancí tøíd(y)|E' istanza di|Isang halimbawa ng|kaa udaaharaNa hai|mao ang pananglitan sa|est l'Instance de|**
-Type restrictions|Beschraenkungen von Klasse|Typy argumentù|Restrizioni sul tipo|Tipo ng Pangpamimigil|prakaara niyantraNa|Tipo ng pagpugong|Restrictions sur le type|**
-Constrains relations|Zwingt Relationen|Omezuje relace|Relazioni di Vincolo|Pamimigil ng ugnayan|magpilit ng pagpatakdo|Relations contraintes|**
-Axioms|Axiome|Axiomy|Assiomi|Aksioma|svayansiddha|Aksioma|Axiomes|**
-Classes|Klassen|Tøídy|Classi|Mga klase|vargon|Mga matang|Classes|**
-Instances|Faelle|Instance|Istanze|Mga halimbawa|udaaharaNon|Mga pananglitan|Instances|**
-Relations|Relationen|Relace|Relazioni|Mga kaugnayan|sambandhon|Mga pagpatakdo|Relations|**
-Functions|Funktionen|Funkce|Funzioni|Mga katuturan|phalana|Mga lihok|Fonctions|**
-Other|Andere|Jiné|Altro|Iba|anya|uban|Autre|**
-Subclass and Instance Hierarchy Tree|Hierarchiebaum fuer Subklassen und Faelle|Hierarchie podtøíd a instancí|Albero Gerarchico delle Sottoclassi e delle Istanze|Mababang klase at halimbawa ng pangkataasang organizasyon|upavarga-padaanukrama trii|kulang mataas matang ug pananglitan kahoy|Arbre Hiérarchique des Sous-classes et des Instances|**
-Welcome to the SUO-KIF browser|Willkommen beim SUO-KIF Browser|Vítejte v prohlízeèi SUO-KIF|Benvenuti nel SUO-KIF browser|Mabuhay sa ang tagabasa ng SUO-KIF||maayong pag-abut sa ang tagapasibsib ng SUO-KIF|Bienvenue dans le SUO-KIF browser|**
-Show Instances|Zeigen Faelle|Zobrazit instance|Mostra Istanze|Ipakitaa ang mga halimbawa|pagpakita mga pananglitan|Voir les Instances|**
-Show Arities|Zeigen Aritien|Zobrazit arity|Mostra Arità|Ipakita ang bilang|pagpakita mga isip|Voir les Aritées|**
+EnglishLanguage|de|cz|it|tg|hi|cb|fr|pt|ar
+english|deutsch|cesky|italiano|tagalog|hindi|cebuano|franï¿½ais|portugues|**
+engFormat|deFormat|czFormat|itFormat|tgFormat|hiFormat|cbFormat|frFormat|ptFormat|**
+engTermFormat|deTermFormat|czTermFormat|itTermFormat|tgTermFormat|hiTermFormat|cbTermFormat|frTermFormat|ptTermFormat|**
+the|**|**|**|**|**|**|**|**|**|&#x627;&#x644;
+other|**|**|**|**|**|**|**|**|&#x623;&#x62e;&#x631;
+another|**|**|**|**|**|**|**|**|&#x623;&#x62e;&#x631;
+first|**|**|**|**|**|**|**|**|&#x627;&#x644;&#x623;&#x648;&#x644;
+second|**|**|**|**|**|**|**|**|&#x627;&#x644;&#x62b;&#x651;&#x627;&#x646;&#x650;&#x64a;
+third|**|**|**|**|**|**|**|**|&#x627;&#x644;&#x62b;&#x651;&#x627;&#x644;&#x650;&#x62b;
+fourth|**|**|**|**|**|**|**|**|&#x627;&#x644;&#x631;&#x651;&#x627;&#x628;&#x650;&#x639;
+fifth|**|**|**|**|**|**|**|**|&#x627;&#x644;&#x62e;&#x64e;&#x627;&#x645;&#x650;&#x633;
+sixth|**|**|**|**|**|**|**|**|&#x627;&#x644;&#x633;&#x651;&#x64e;&#x627;&#x62f;&#x650;&#x633;
+seventh|**|**|**|**|**|**|**|**|&#x627;&#x644;&#x633;&#x651;&#x627;&#x628;&#x650;&#x639;
+eighth|**|**|**|**|**|**|**|**|&#x627;&#x644;&#x62b;&#x651;&#x627;&#x645;&#x650;&#x646;
+ninth|**|**|**|**|**|**|**|**|&#x627;&#x644;&#x62a;&#x651;&#x627;&#x633;&#x650;&#x639;
+tenth|**|**|**|**|**|**|**|**|&#x627;&#x644;&#x639;&#x627;&#x634;&#x650;&#x631;
+eleventh|**|**|**|**|**|**|**|**|&#x627;&#x644;&#x62d;&#x627;&#x62f;&#x650;&#x64a;&#x64e;&#x20;&#x639;&#x64e;&#x634;&#x64e;&#x631;
+twelfth|**|**|**|**|**|**|**|**|&#x627;&#x644;&#x62b;&#x651;&#x627;&#x646;&#x650;&#x64a;&#x64e;&#x20;&#x639;&#x64e;&#x634;&#x64e;&#x631;
+kind of|**|**|**|**|**|**|**|**|&#x646;&#x64e;&#x648;&#x652;&#x639;&#x20;&#x645;&#x650;&#x646;
+if|wenn|jestlize|se|kong|yadi|kong|si|se|&#x625;&#x630;&#x627;
+then|dann|potom|allora|kung gayon|to|kong mao|alors|entao|&#x64a;&#x642;&#x62a;&#x636;&#x64a;
+if and only if|genau dann wenn|tehdy a jen tehdy pokud|se e soltanto se|kung at tangi kung|tabhii aura sirpha tabhii|kong, ug usa ra kong|si et seulement si|se e somente se|**
+either|entweder|buï¿½|sia|alinman|yaa|usa|l'un ou l'autre|ou um ou outro|**
+not|nicht|ne|non|hindi|nahiin|dili|pas|nao|&#x644;&#x627;
+or|oder|nebo|o|o|yaa|kon|ou|ou|&#x623;&#x648;
+and|und|a|e|at|aura|ug|et|e|&#x648;
+there exist|es gibt|existujï¿½|esistono|mayroon|hain|naay|il existe|existe|&#x64a;&#x648;&#x62c;&#x62f;
+there exists|es gibt|existuje|esiste|mayroon|hai|naay|il existe|existe|&#x64a;&#x648;&#x62c;&#x62f;
+there don't exist|es gibt nicht|neexistujï¿½|non esistono|walang|nahiin hain|dili naay|il n'existe pas|nao existe|&#x644;&#x627;&#x20;&#x64a;&#x648;&#x62c;&#x62f;
+there doesn't exist|es gibt nicht|neexistuje|non esiste|walang|nahiin hai|dili naay|il n'existe pas|nao existe|&#x644;&#x627;&#x20;&#x64a;&#x648;&#x62c;&#x62f;
+for all|fuer alle|pro vsechny|per ogni|para sa lahat|sabhii|sa tanan|pour tout|para todo|&#x645;&#x646;&#x20;&#x623;&#x62c;&#x644;&#x20;&#x643;&#x644;
+holds|gilt|platï¿½|vale|maging totoo|sahii hai|tinuod sa|s'applique|vale| &#x64a;&#x635;&#x62d;
+so that|um|tak, ze|tale che|para sa ganoon|jisase ki|ug kanang|de sorte que|tal que|&#x628;&#x62d;&#x64a;&#x62b;
+such that|um|tak, ze|tale che|para sa ganoon|jisase ki|ug kanang|de sorte que|tal que|&#x628;&#x62d;&#x64a;&#x62b;
+,|,|,|,|,|,|,|,|,|&#x60c;
+?|?|?|?|?|?|?|?|?|&#x61f;
+Select language|Waehlen Sprache|Zvolte jazyk|Seleziona lingua|pumili ng wika|bhaashhaa chuniye|pagpili pinulongan|Selectionner la langue|Selecione idioma|**
+Concept|Begriff|Koncept|Concetto|Ideya|sankalpanaa|hunahuna|Concept|Conceito|**
+Show|Zeigen|Zobraz|Mostra|Ipakita|pradarshana|pagpakita|Voir|Mostre|**
+Home|Hauptseite|Hlavnï¿½ strï¿½nka|Pagina Iniziale|Bahay pahina|Homa|balay|Page d'accueil|Pagina Inicial|**
+Ontology|Ontologie|Ontologie|Ontologia|Ontologia|vyashhTi vigyaana|Ontologia|Ontologie|Ontologia|**
+Superclass(es)|Superklasse|Nadtï¿½ï¿½da(y)|Sopraclasse|(Mga) mas klase ng mataas|adhivarga(adhivargon)|dugang pa mataas matang|Superclasse(s)|Superclasse(s)|**
+Subclass(es)|Subklasse|Podtï¿½ï¿½da(y)|Sottoclasse|(Mga) mas mababa ng klase|upavarga(upavargon)|kulang mataas matang|Sous-classe(s)|Sub-classe(s)|**
+Is instance of|Ist ein Fall von|Je instancï¿½ tï¿½ï¿½d(y)|E' istanza di|Isang halimbawa ng|kaa udaaharaNa hai|mao ang pananglitan sa|est l'Instance de|e' instancia de|**
+Type restrictions|Beschraenkungen von Klasse|Typy argumentï¿½|Restrizioni sul tipo|Tipo ng Pangpamimigil|prakaara niyantraNa|Tipo ng pagpugong|Restrictions sur le type|Restricoes de tipo|**
+Constrains relations|Zwingt Relationen|Omezuje relace|Relazioni di Vincolo|Pamimigil ng ugnayan|magpilit ng pagpatakdo|Relations contraintes|Relacoes de vinculo|**
+Axioms|Axiome|Axiomy|Assiomi|Aksioma|svayansiddha|Aksioma|Axiomes|Axiomas|**
+Classes|Klassen|Tï¿½ï¿½dy|Classi|Mga klase|vargon|Mga matang|Classes|Classes|**
+Instances|Faelle|Instance|Istanze|Mga halimbawa|udaaharaNon|Mga pananglitan|Instances|Instancias|**
+Relations|Relationen|Relace|Relazioni|Mga kaugnayan|sambandhon|Mga pagpatakdo|Relations|Relacoes|**
+Functions|Funktionen|Funkce|Funzioni|Mga katuturan|phalana|Mga lihok|Fonctions|Funcoes|**
+Other|Andere|Jinï¿½|Altro|Iba|anya|uban|Autre|Outro|**
+Subclass and Instance Hierarchy Tree|Hierarchiebaum fuer Subklassen und Faelle|Hierarchie podtï¿½ï¿½d a instancï¿½|Albero Gerarchico delle Sottoclassi e delle Istanze|Mababang klase at halimbawa ng pangkataasang organizasyon|upavarga-padaanukrama trii|kulang mataas matang ug pananglitan kahoy|Arbre Hiï¿½rarchique des Sous-classes et des Instances|Arvore hieraquica de sub-classes e instancias|**
+Welcome to the SUO-KIF browser|Willkommen beim SUO-KIF Browser|Vï¿½tejte v prohlï¿½zeï¿½i SUO-KIF|Benvenuti nel SUO-KIF browser|Mabuhay sa ang tagabasa ng SUO-KIF||maayong pag-abut sa ang tagapasibsib ng SUO-KIF|Bienvenue dans le SUO-KIF browser|Bemvindo ao SUO-KIF browser|**
+Show Instances|Zeigen Faelle|Zobrazit instance|Mostra Istanze|Ipakitaa ang mga halimbawa|pagpakita mga pananglitan|Voir les Instances|Mostre as instancias|**
+Show Arities|Zeigen Aritien|Zobrazit arity|Mostra Aritï¿½|Ipakita ang bilang|pagpakita mga isip|Voir les Aritï¿½es|Mostre aridades|**
 
