small additions for Portuguese

--- a/KBs/Translations/language.txt
+++ b/KBs/Translations/language.txt
@@ -1,3 +1,5 @@
+;  LANGUAGE.TXT
+;
 ;  This program is free software; you can redistribute it and/or
 ;  modify it under the terms of the GNU Lesser General Public
 ;  License as published by the Free Software Foundation; either
@@ -17,7 +19,7 @@
 ; defines set of languages for which the localization is supported. It
 ; contains several fields separated by a pipe (|). Each of the subsequent
 ; lines define localization of a single user interface element. The first
-; item of each line is english variant of the term and should not be
+; item of each line is the English variant of the term and should not be
 ; changed. You may add as many languages as you want.
 ;
 ; Note: this file is in windows-1250 encoding
