--- a/KBs/Translations/relations-tg.txt
+++ b/KBs/Translations/relations-tg.txt
@@ -228,7 +228,7 @@
 (format tg father "%2 %n ay ang &%ama sa %1")
 (termFormat tg father "ama")
 (format tg fills "%1 %n &%nagtatambak %2")
-(termFformat tg fills "nagtatambak")
+(termFormat tg fills "nagtatambak")
 (format tg finishes "%1 %n &%simutin %2")
 (termFormat tg finishes "simutin")
 (format tg FloorFn "ang &%sakdal malaki numero menos o pareho sa %1")
